# plotholder

./: README.md  pyproject.toml  requirements.txt
plotholder/src/: chart_content.py  data_producer.py  plot_gen.py  text_gen.py
plotholder/src/dictionary/: nouns.dic
plotholder/tests/: test_data_producer.py  test_plot_gen.py  test_text_gen.py
