[project]
name = "plotholder"
version = "0.1"
description = "Generate placeholder plots"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["twaddle", "placeholder", "chart", "image"]
authors = [
  {name = "Chris Hengler"},
  {email = "dr.c.hengler@gmail.com"}
]
maintainers = [
  {name = "Chris Hengler"},
  {email = "dr.c.hengler@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "pytest >= 7.0.0",
  "twaddle >= 0.9"
]

[project.urls]
repository = "https://github.com/chrishengler/plotholder"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]